2.5 «Сетевое взаимодействие в Kubernetes. Часть 2»/manifests/deploy_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: backend-multitool
  name: backend-multitool
  namespace: test 
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend-multitool
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend-multitool
    spec:
      containers:
      - image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent 
        name: multitool
        ports:
        - containerPort: 80
          name: http-port
        - containerPort: 443
          name: https-port
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
